# terraform-provider-aviatrix

./: .codespellrc  .envrc  .gitignore  .golangci.toml  .golangci_strict.toml  .goreleaser.yml  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  GNUmakefile  Makefile  README.md  README_accep_test.md  README_goaviatrix.md  TRANSIT_HA_GATEWAY_IMPLEMENTATION.md  aviatrix.tf  cmdTestInfra.sh  config.go  data_source_aviatrix_account.go  data_source_aviatrix_caller_identity.go  data_source_aviatrix_gateway.go  example.tf  flake.nix  go.mod  go.sum  main.go  out  provider.go  resource_account.go  resource_admin_email.go  resource_customer_id.go  resource_gateway.go  resource_transitive_peering.go  resource_tunnel.go  terraform.tfstate  terraform.tfstate.backup  version
.github/ISSUE_TEMPLATE/: bug_report.md
.github/include/: invitation.sh
.github/workflows/: backport.yml  backup-keys.yml  go.yml  invite.yml  pubkey.yml  publish-latest-provider.yml  release.yml
aviatrix/: .gitignore  BUILD.bazel  common_group_schema.go  config.go  data_source_aviatrix_account.go  data_source_aviatrix_account_test.go  data_source_aviatrix_all_network_domains.go  data_source_aviatrix_all_network_domains_test.go  data_source_aviatrix_all_transit_gateways.go  data_source_aviatrix_all_transit_gateways_test.go  data_source_aviatrix_attachment_vrf_status.go  data_source_aviatrix_caller_identity.go  data_source_aviatrix_caller_identity_test.go  data_source_aviatrix_controller_metadata.go  data_source_aviatrix_controller_metadata_test.go  data_source_aviatrix_dcf_attachment_points.go  data_source_aviatrix_dcf_attachment_points_test.go  data_source_aviatrix_dcf_log_profile.go  data_source_aviatrix_dcf_log_profile_test.go  data_source_aviatrix_dcf_mitm_ca.go  data_source_aviatrix_dcf_mitm_ca_test.go  data_source_aviatrix_dcf_mwp_attachment_points.go  data_source_aviatrix_dcf_mwp_attachment_points_test.go  data_source_aviatrix_dcf_tls_profile.go  data_source_aviatrix_dcf_tls_profile_test.go  data_source_aviatrix_dcf_trustbundle.go  data_source_aviatrix_dcf_trustbundle_test.go  data_source_aviatrix_dcf_webgroups.go  data_source_aviatrix_dcf_webgroups_test.go  data_source_aviatrix_device_interfaces.go  data_source_aviatrix_device_interfaces_test.go  data_source_aviatrix_edge_gateway_wan_interface_discovery.go  data_source_aviatrix_edge_gateway_wan_interface_discovery_test.go  data_source_aviatrix_edge_gateway_wan_interfaces.go  data_source_aviatrix_edge_gateway_wan_interfaces_test.go  data_source_aviatrix_firenet.go  data_source_aviatrix_firenet_firewall_manager.go  data_source_aviatrix_firenet_firewall_manager_test.go  data_source_aviatrix_firenet_test.go  data_source_aviatrix_firenet_vendor_integration.go  (+523 more)
aviatrix/test-data/: testAccEdgeSpokeTransitAttachmentConfigEdge.tf
cloud/: const.go
docs/: FeatureCompatibility.xlsx  README.md  index.md
docs/data-sources/: aviatrix_account.md  aviatrix_all_network_domains.md  aviatrix_all_transit_gateways.md  aviatrix_attachment_vrf_status.md  aviatrix_caller_identity.md  aviatrix_controller_metadata.md  aviatrix_dcf_attachment_point.md  aviatrix_dcf_log_profile.md  aviatrix_dcf_mitm_ca.md  aviatrix_dcf_mwp_attachment_point.md  aviatrix_dcf_tls_profile.md  aviatrix_dcf_trustbundle.md  aviatrix_device_interfaces.md  aviatrix_edge_gateway_wan_interface_discovery.md  aviatrix_edge_gateway_wan_interfaces.md  aviatrix_firenet.md  aviatrix_firenet_firewall_manager.md  aviatrix_firenet_vendor_integration.md  aviatrix_firewall.md  aviatrix_firewall_instance_images.md  aviatrix_gateway.md  aviatrix_gateway_image.md  aviatrix_network_domains.md  aviatrix_smart_groups.md  aviatrix_spoke_gateway.md  aviatrix_spoke_gateway_inspection_subnets.md  aviatrix_spoke_gateways.md  aviatrix_transit_gateway.md  aviatrix_transit_gateways.md  aviatrix_vpc.md  aviatrix_vpc_tracker.md  aviatrix_web_group.md
docs/feature-compatibility/: FeatureCompatibility.xlsx  README.md
docs/guides/: feature-changelist-v2.md  feature-changelist-v3.md  feature-changelist-v4.md  feature-changelist-v8.md  feature-changelist-v9.md  feature-changelist.md  introduction_to_gateway_group.md  migrating_from_security_domain_to_network_domain.md  migrating_to_active_mesh_transit_network.md  release-compatibility.md  release-note.md  release-notes.md  v2-upgrade-guide.md
docs/resources/: aviatrix_account.md  aviatrix_account_user.md  aviatrix_app_domain.md  aviatrix_aws_guard_duty.md  aviatrix_aws_peer.md  aviatrix_aws_tgw.md  aviatrix_aws_tgw_connect.md  aviatrix_aws_tgw_connect_peer.md  aviatrix_aws_tgw_directconnect.md  aviatrix_aws_tgw_intra_domain_inspection.md  aviatrix_aws_tgw_network_domain.md  aviatrix_aws_tgw_peering.md  aviatrix_aws_tgw_peering_domain_conn.md  aviatrix_aws_tgw_security_domain.md  aviatrix_aws_tgw_vpc_attachment.md  (+162 more)
examples/: fullmesh.tf
goaviatrix/: BUILD.bazel  README.md  account.go  account_test.go  account_user.go  adminemail.go  app_domain.go  appdomain_cache.go  arm_peering.go  arm_spoke_native_peering.go  avx_http_error.go  aws_guard_duty.go  aws_peering.go  aws_tgw.go  aws_tgw_connect.go  aws_tgw_direct_conn.go  aws_tgw_directconnect.go  aws_tgw_peering.go  aws_tgw_peering_domain_conn.go  aws_tgw_transit_gateway_attachment.go  aws_tgw_vpc_attachment.go  aws_tgw_vpn_conn.go  azure_peering.go  azure_spoke_native_peering.go  azure_vng_conn.go  branch_router.go  branch_router_avx_tgw_attachment.go  branch_router_aws_tgw_attachment.go  branch_router_tag.go  branch_router_transit_gateway_attachment.go  branch_router_virtual_wan_attachment.go  centralized_transit_firenet.go  certificate_import.go  check.go  check_test.go  client.go  client_2.go  client_2_5.go  client_mock.go  client_proxy_config.go  (+158 more)
goaviatrix/cloud/: const.go
scripts/: changelog-links.sh  errcheck.sh  gen_version.py  gofmtcheck.sh  gogetcookie.sh  reset_vendor.py  update_vendor.py
test-data/: testAccEdgeSpokeTransitAttachmentConfigEdge.tf
test-infra/: README_accep_test.md  aviatrix.tf  cmdExportOutput.sh  outputs.tf  provider.tf  runAccTest.sh  variables.tf
website/: aviatrix.erb
(+129 files in other folders)
