load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

genrule(
    name = "terraform_provider_version",
    srcs = ["//bazel/terraform_provider_version"],
    outs = ["terraform_provider_version.txt"],
    cmd = "cat $(SRCS) > $@",
)

go_library(
    name = "aviatrix",
    srcs = [
        "common_group_schema.go",
        "config.go",
        "data_source_aviatrix_account.go",
        "data_source_aviatrix_caller_identity.go",
        "data_source_aviatrix_controller_metadata.go",
        "data_source_aviatrix_dcf_attachment_points.go",
        "data_source_aviatrix_dcf_log_profile.go",
        "data_source_aviatrix_dcf_tls_profile.go",
        "data_source_aviatrix_dcf_trustbundle.go",
        "data_source_aviatrix_dcf_webgroups.go",
        "data_source_aviatrix_device_interfaces.go",
        "data_source_aviatrix_edge_gateway_wan_interface_discovery.go",
        "data_source_aviatrix_firenet.go",
        "data_source_aviatrix_firenet_firewall_manager.go",
        "data_source_aviatrix_firenet_vendor_integration.go",
        "data_source_aviatrix_firewall.go",
        "data_source_aviatrix_firewall_instance_images.go",
        "data_source_aviatrix_gateway.go",
        "data_source_aviatrix_gateway_image.go",
        "data_source_aviatrix_network_domains.go",
        "data_source_aviatrix_smart_groups.go",
        "data_source_aviatrix_spoke_gateway.go",
        "data_source_aviatrix_spoke_gateway_inspection_subnets.go",
        "data_source_aviatrix_spoke_gateways.go",
        "data_source_aviatrix_transit_gateway.go",
        "data_source_aviatrix_transit_gateways.go",
        "data_source_aviatrix_vpc.go",
        "data_source_aviatrix_vpc_tracker.go",
        "provider.go",
        "resource_aviatrix_account.go",
        "resource_aviatrix_account_user.go",
        "resource_aviatrix_aws_guard_duty.go",
        "resource_aviatrix_aws_peer.go",
        "resource_aviatrix_aws_tgw.go",
        "resource_aviatrix_aws_tgw_connect.go",
        "resource_aviatrix_aws_tgw_connect_peer.go",
        "resource_aviatrix_aws_tgw_directconnect.go",
        "resource_aviatrix_aws_tgw_intra_domain_inspection.go",
        "resource_aviatrix_aws_tgw_migrate.go",
        "resource_aviatrix_aws_tgw_network_domain.go",
        "resource_aviatrix_aws_tgw_peering.go",
        "resource_aviatrix_aws_tgw_peering_domain_conn.go",
        "resource_aviatrix_aws_tgw_transit_gateway_attachment.go",
        "resource_aviatrix_aws_tgw_vpc_attachment.go",
        "resource_aviatrix_aws_tgw_vpn_conn.go",
        "resource_aviatrix_azure_peer.go",
        "resource_aviatrix_azure_spoke_native_peering.go",
        "resource_aviatrix_azure_vng_conn.go",
        "resource_aviatrix_centralized_transit_firenet.go",
        "resource_aviatrix_cloudwatch_agent.go",
        "resource_aviatrix_config_feature.go",
        "resource_aviatrix_controller_access_allow_list_config.go",
        "resource_aviatrix_controller_bgp_communities_auto_cloud_config.go",
        "resource_aviatrix_controller_bgp_communities_global_config.go",
        "resource_aviatrix_controller_bgp_max_as_limit_config.go",
        "resource_aviatrix_controller_cert_domain_config.go",
        "resource_aviatrix_controller_config.go",
        "resource_aviatrix_controller_email_config.go",
        "resource_aviatrix_controller_email_exception_notification_config.go",
        "resource_aviatrix_controller_gateway_keepalive_config.go",
        "resource_aviatrix_controller_private_mode_config.go",
        "resource_aviatrix_controller_private_oob.go",
        "resource_aviatrix_controller_security_group_management_config.go",
        "resource_aviatrix_copilot_association.go",
        "resource_aviatrix_copilot_fault_tolerant_deployment.go",
        "resource_aviatrix_copilot_security_group_management_config.go",
        "resource_aviatrix_copilot_simple_deployment.go",
        "resource_aviatrix_datadog_agent.go",
        "resource_aviatrix_dcf_default_ips_profile.go",
        "resource_aviatrix_dcf_ips_profile.go",
        "resource_aviatrix_dcf_ips_profile_vpc.go",
        "resource_aviatrix_dcf_ips_rule_feed.go",
        "resource_aviatrix_dcf_policy_group.go",
        "resource_aviatrix_dcf_ruleset.go",
        "resource_aviatrix_dcf_tls_profile.go",
        "resource_aviatrix_dcf_trustbundle.go",
        "resource_aviatrix_device_interface_config.go",
        "resource_aviatrix_distributed_firewalling_config.go",
        "resource_aviatrix_distributed_firewalling_default_action_rule.go",
        "resource_aviatrix_distributed_firewalling_deployment_policy.go",
        "resource_aviatrix_distributed_firewalling_intra_vpc.go",
        "resource_aviatrix_distributed_firewalling_origin_cert_enforcement_config.go",
        "resource_aviatrix_distributed_firewalling_policy_list.go",
        "resource_aviatrix_distributed_firewalling_proxy_ca_config.go",
        "resource_aviatrix_edge_csp.go",
        "resource_aviatrix_edge_csp_ha.go",
        "resource_aviatrix_edge_equinix.go",
        "resource_aviatrix_edge_equinix_ha.go",
        "resource_aviatrix_edge_gateway_selfmanaged.go",
        "resource_aviatrix_edge_gateway_selfmanaged_ha.go",
        "resource_aviatrix_edge_gateway_selfmanaged_helper.go",
        "resource_aviatrix_edge_megaport.go",
        "resource_aviatrix_edge_megaport_ha.go",
        "resource_aviatrix_edge_neo.go",
        "resource_aviatrix_edge_neo_device_onboarding.go",
        "resource_aviatrix_edge_neo_ha.go",
        "resource_aviatrix_edge_platform.go",
        "resource_aviatrix_edge_platform_device_onboarding.go",
        "resource_aviatrix_edge_platform_ha.go",
        "resource_aviatrix_edge_proxy_profile_config.go",
        "resource_aviatrix_edge_spoke.go",
        "resource_aviatrix_edge_spoke_external_device_conn.go",
        "resource_aviatrix_edge_spoke_transit_attachment.go",
        "resource_aviatrix_edge_spoke_transit_attachment_helper.go",
        "resource_aviatrix_edge_vm_selfmanaged.go",
        "resource_aviatrix_edge_vm_selfmanaged_ha.go",
        "resource_aviatrix_edge_zededa.go",
        "resource_aviatrix_edge_zededa_ha.go",
        "resource_aviatrix_filebeat_forwarder.go",
        "resource_aviatrix_firenet.go",
        "resource_aviatrix_firenet_migrate.go",
        "resource_aviatrix_firewall.go",
        "resource_aviatrix_firewall_instance.go",
        "resource_aviatrix_firewall_instance_association.go",
        "resource_aviatrix_firewall_management_access.go",
        "resource_aviatrix_firewall_migrate.go",
        "resource_aviatrix_firewall_policy.go",
        "resource_aviatrix_firewall_tag.go",
        "resource_aviatrix_fqdn.go",
        "resource_aviatrix_fqdn_global_config.go",
        "resource_aviatrix_fqdn_migrate.go",
        "resource_aviatrix_fqdn_pass_through.go",
        "resource_aviatrix_fqdn_tag_rule.go",
        "resource_aviatrix_gateway.go",
        "resource_aviatrix_gateway_dnat.go",
        "resource_aviatrix_gateway_migrate.go",
        "resource_aviatrix_gateway_snat.go",
        "resource_aviatrix_geo_vpn.go",
        "resource_aviatrix_global_vpc_excluded_instance.go",
        "resource_aviatrix_global_vpc_tagging_settings.go",
        "resource_aviatrix_k8s_config.go",
        "resource_aviatrix_kubernetes_cluster.go",
        "resource_aviatrix_link_hierarchy.go",
        "resource_aviatrix_netflow_agent.go",
        "resource_aviatrix_periodic_ping.go",
        "resource_aviatrix_private_mode_lb.go",
        "resource_aviatrix_private_mode_multicloud_endpoint.go",
        "resource_aviatrix_proxy_config.go",
        "resource_aviatrix_qos_class.go",
        "resource_aviatrix_qos_policy_list.go",
        "resource_aviatrix_rbac_group.go",
        "resource_aviatrix_rbac_group_access_account_attachment.go",
        "resource_aviatrix_rbac_group_access_account_membership.go",
        "resource_aviatrix_rbac_group_permission_attachment.go",
        "resource_aviatrix_rbac_group_user_attachment.go",
        "resource_aviatrix_rbac_group_user_membership.go",
        "resource_aviatrix_remote_syslog.go",
        "resource_aviatrix_saml_endpoint.go",
        "resource_aviatrix_segmentation_network_domain.go",
        "resource_aviatrix_segmentation_network_domain_association.go",
        "resource_aviatrix_segmentation_network_domain_connection_policy.go",
        "resource_aviatrix_site2cloud.go",
        "resource_aviatrix_site2cloud_ca_cert_tag.go",
        "resource_aviatrix_site2cloud_migrate.go",
        "resource_aviatrix_sla_class.go",
        "resource_aviatrix_smart_group.go",
        "resource_aviatrix_splunk_logging.go",
        "resource_aviatrix_spoke_external_device_conn.go",
        "resource_aviatrix_spoke_gateway.go",
        "resource_aviatrix_spoke_gateway_migrate.go",
        "resource_aviatrix_spoke_gateway_subnet_group.go",
        "resource_aviatrix_spoke_group.go",
        "resource_aviatrix_spoke_ha_gateway.go",
        "resource_aviatrix_spoke_instance.go",
        "resource_aviatrix_spoke_instance_schema.go",
        "resource_aviatrix_spoke_transit_attachment.go",
        "resource_aviatrix_sumologic_forwarder.go",
        "resource_aviatrix_traffic_classifier.go",
        "resource_aviatrix_trans_peer.go",
        "resource_aviatrix_transit_external_device_conn.go",
        "resource_aviatrix_transit_firenet_policy.go",
        "resource_aviatrix_transit_gateway.go",
        "resource_aviatrix_transit_gateway_migrate.go",
        "resource_aviatrix_transit_gateway_peering.go",
        "resource_aviatrix_transit_gateway_peering_helpers.go",
        "resource_aviatrix_transit_group.go",
        "resource_aviatrix_transit_instance.go",
        "resource_aviatrix_transit_instance_schema.go",
        "resource_aviatrix_tunnel.go",
        "resource_aviatrix_vgw_conn.go",
        "resource_aviatrix_vgw_conn_migrate.go",
        "resource_aviatrix_vpc.go",
        "resource_aviatrix_vpc_migrate.go",
        "resource_aviatrix_vpn_cert_download.go",
        "resource_aviatrix_vpn_profile.go",
        "resource_aviatrix_vpn_profile_migrate.go",
        "resource_aviatrix_vpn_user.go",
        "resource_aviatrix_vpn_user_accelerator.go",
        "resource_aviatrix_vpn_user_migrate.go",
        "resource_aviatrix_web_group.go",
        "utils.go",
    ],
    embedsrcs = [
        "terraform_provider_version.txt",
    ],
    importpath = "aviatrix.com/terraform-provider-aviatrix/aviatrix",
    tags = ["requires-network"],
    visibility = ["//go/aviatrix.com/terraform-provider-aviatrix:__subpackages__"],
    deps = [
        "//go/aviatrix.com/terraform-provider-aviatrix/goaviatrix",
        "@com_github_google_uuid//:uuid",
        "@com_github_hashicorp_go_cty//cty",
        "@com_github_hashicorp_go_version//:go-version",
        "@com_github_hashicorp_terraform_plugin_sdk_v2//diag",
        "@com_github_hashicorp_terraform_plugin_sdk_v2//helper/resource",
        "@com_github_hashicorp_terraform_plugin_sdk_v2//helper/schema",
        "@com_github_hashicorp_terraform_plugin_sdk_v2//helper/validation",
        "@com_github_hashicorp_terraform_plugin_sdk_v2//terraform",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "aviatrix_test",
    srcs = [
        "data_source_aviatrix_account_test.go",
        "data_source_aviatrix_caller_identity_test.go",
        "data_source_aviatrix_controller_metadata_test.go",
        "data_source_aviatrix_dcf_attachment_points_test.go",
        "data_source_aviatrix_dcf_log_profile_test.go",
        "data_source_aviatrix_dcf_tls_profile_test.go",
        "data_source_aviatrix_dcf_trustbundle_test.go",
        "data_source_aviatrix_dcf_webgroups_test.go",
        "data_source_aviatrix_device_interfaces_test.go",
        "data_source_aviatrix_edge_gateway_wan_interface_discovery_test.go",
        "data_source_aviatrix_firenet_firewall_manager_test.go",
        "data_source_aviatrix_firenet_test.go",
        "data_source_aviatrix_firenet_vendor_integration_test.go",
        "data_source_aviatrix_firewall_instance_images_test.go",
        "data_source_aviatrix_firewall_test.go",
        "data_source_aviatrix_gateway_image_test.go",
        "data_source_aviatrix_gateway_test.go",
        "data_source_aviatrix_network_domains_test.go",
        "data_source_aviatrix_smart_groups_test.go",
        "data_source_aviatrix_spoke_gateway_inspection_subnets_test.go",
        "data_source_aviatrix_spoke_gateway_test.go",
        "data_source_aviatrix_spoke_gateways_test.go",
        "data_source_aviatrix_transit_gateway_test.go",
        "data_source_aviatrix_transit_gateways_test.go",
        "data_source_aviatrix_vpc_test.go",
        "data_source_aviatrix_vpc_tracker_test.go",
        "provider_test.go",
        "resource_aviatrix_account_test.go",
        "resource_aviatrix_account_unit_test.go",
        "resource_aviatrix_account_user_test.go",
        "resource_aviatrix_aws_guard_duty_test.go",
        "resource_aviatrix_aws_peer_test.go",
        "resource_aviatrix_aws_tgw_connect_peer_test.go",
        "resource_aviatrix_aws_tgw_connect_test.go",
        "resource_aviatrix_aws_tgw_directconnect_test.go",
        "resource_aviatrix_aws_tgw_intra_domain_inspection_test.go",
        "resource_aviatrix_aws_tgw_network_domain_test.go",
        "resource_aviatrix_aws_tgw_peering_domain_conn_test.go",
        "resource_aviatrix_aws_tgw_peering_test.go",
        "resource_aviatrix_aws_tgw_test.go",
        "resource_aviatrix_aws_tgw_transit_gateway_attachment_test.go",
        "resource_aviatrix_aws_tgw_vpc_attachment_test.go",
        "resource_aviatrix_aws_tgw_vpn_conn_test.go",
        "resource_aviatrix_azure_peer_test.go",
        "resource_aviatrix_azure_spoke_native_peering_test.go",
        "resource_aviatrix_azure_vng_conn_test.go",
        "resource_aviatrix_centralized_transit_firenet_test.go",
        "resource_aviatrix_cloudn_transit_gateway_attachment_test.go",
        "resource_aviatrix_cloudwatch_agent_test.go",
        "resource_aviatrix_config_feature_test.go",
        "resource_aviatrix_controller_access_allow_list_config_test.go",
        "resource_aviatrix_controller_bgp_communities_auto_cloud_config_test.go",
        "resource_aviatrix_controller_bgp_communities_global_config_test.go",
        "resource_aviatrix_controller_bgp_max_as_limit_config_test.go",
        "resource_aviatrix_controller_cert_domain_config_test.go",
        "resource_aviatrix_controller_config_test.go",
        "resource_aviatrix_controller_email_config_test.go",
        "resource_aviatrix_controller_email_exception_notification_config_test.go",
        "resource_aviatrix_controller_gateway_keepalive_config_test.go",
        "resource_aviatrix_controller_private_mode_config_test.go",
        "resource_aviatrix_controller_private_oob_test.go",
        "resource_aviatrix_controller_security_group_management_config_test.go",
        "resource_aviatrix_copilot_association_test.go",
        "resource_aviatrix_copilot_fault_tolerant_deployment_test.go",
        "resource_aviatrix_copilot_security_group_management_config_test.go",
        "resource_aviatrix_copilot_simple_deployment_test.go",
        "resource_aviatrix_datadog_agent_test.go",
        "resource_aviatrix_dcf_ips_test.go",
        "resource_aviatrix_dcf_policy_group_test.go",
        "resource_aviatrix_dcf_ruleset_default_value_test.go",
        "resource_aviatrix_dcf_ruleset_test.go",
        "resource_aviatrix_dcf_tls_profile_test.go",
        "resource_aviatrix_dcf_trustbundle_test.go",
        "resource_aviatrix_device_interface_config_test.go",
        "resource_aviatrix_distributed_firewalling_config_test.go",
        "resource_aviatrix_distributed_firewalling_default_action_rule_test.go",
        "resource_aviatrix_distributed_firewalling_deployment_policy_test.go",
        "resource_aviatrix_distributed_firewalling_intra_vpc_test.go",
        "resource_aviatrix_distributed_firewalling_origin_cert_enforcement_config_test.go",
        "resource_aviatrix_distributed_firewalling_policy_list_test.go",
        "resource_aviatrix_distributed_firewalling_proxy_ca_config_test.go",
        "resource_aviatrix_edge_csp_ha_test.go",
        "resource_aviatrix_edge_csp_test.go",
        "resource_aviatrix_edge_equinix_ha_test.go",
        "resource_aviatrix_edge_equinix_test.go",
        "resource_aviatrix_edge_gateway_selfmanaged_ha_test.go",
        "resource_aviatrix_edge_gateway_selfmanaged_helper_test.go",
        "resource_aviatrix_edge_gateway_selfmanaged_test.go",
        "resource_aviatrix_edge_megaport_ha_test.go",
        "resource_aviatrix_edge_megaport_test.go",
        "resource_aviatrix_edge_neo_device_onboarding_test.go",
        "resource_aviatrix_edge_neo_ha_test.go",
        "resource_aviatrix_edge_neo_test.go",
        "resource_aviatrix_edge_platform_device_onboarding_test.go",
        "resource_aviatrix_edge_platform_ha_test.go",
        "resource_aviatrix_edge_platform_test.go",
        "resource_aviatrix_edge_spoke_external_device_conn_test.go",
        "resource_aviatrix_edge_spoke_test.go",
        "resource_aviatrix_edge_spoke_transit_attachment_helper_test.go",
        "resource_aviatrix_edge_spoke_transit_attachment_test.go",
        "resource_aviatrix_edge_vm_selfmanaged_ha_test.go",
        "resource_aviatrix_edge_vm_selfmanaged_test.go",
        "resource_aviatrix_edge_zededa_ha_test.go",
        "resource_aviatrix_edge_zededa_test.go",
        "resource_aviatrix_firenet_test.go",
        "resource_aviatrix_firewall_instance_association_test.go",
        "resource_aviatrix_firewall_instance_test.go",
        "resource_aviatrix_firewall_management_access_test.go",
        "resource_aviatrix_firewall_policy_test.go",
        "resource_aviatrix_firewall_tag_test.go",
        "resource_aviatrix_firewall_test.go",
        "resource_aviatrix_fqdn_global_config_test.go",
        "resource_aviatrix_fqdn_pass_through_test.go",
        "resource_aviatrix_fqdn_tag_rule_test.go",
        "resource_aviatrix_fqdn_test.go",
        "resource_aviatrix_gateway_dnat_test.go",
        "resource_aviatrix_gateway_snat_test.go",
        "resource_aviatrix_gateway_test.go",
        "resource_aviatrix_geo_vpn_test.go",
        "resource_aviatrix_global_vpc_excluded_instance_test.go",
        "resource_aviatrix_global_vpc_tagging_settings_test.go",
        "resource_aviatrix_k8s_config_test.go",
        "resource_aviatrix_kubernetes_cluster_test.go",
        "resource_aviatrix_link_hierarchy_test.go",
        "resource_aviatrix_netflow_agent_test.go",
        "resource_aviatrix_periodic_ping_test.go",
        "resource_aviatrix_private_mode_lb_test.go",
        "resource_aviatrix_private_mode_multicloud_endpoint_test.go",
        "resource_aviatrix_proxy_config_test.go",
        "resource_aviatrix_qos_class_test.go",
        "resource_aviatrix_qos_policy_list_test.go",
        "resource_aviatrix_rbac_group_access_account_attachment_test.go",
        "resource_aviatrix_rbac_group_access_account_membership_test.go",
        "resource_aviatrix_rbac_group_permission_attachment_test.go",
        "resource_aviatrix_rbac_group_test.go",
        "resource_aviatrix_rbac_group_user_attachment_test.go",
        "resource_aviatrix_rbac_group_user_membership_test.go",
        "resource_aviatrix_remote_syslog_test.go",
        "resource_aviatrix_saml_endpoint_test.go",
        "resource_aviatrix_segmentation_network_domain_association_test.go",
        "resource_aviatrix_segmentation_network_domain_connection_policy_test.go",
        "resource_aviatrix_segmentation_network_domain_test.go",
        "resource_aviatrix_site2cloud_ca_cert_tag_test.go",
        "resource_aviatrix_site2cloud_test.go",
        "resource_aviatrix_sla_class_test.go",
        "resource_aviatrix_smart_group_test.go",
        "resource_aviatrix_spoke_external_device_conn_test.go",
        "resource_aviatrix_spoke_gateway_subnet_group_test.go",
        "resource_aviatrix_spoke_gateway_test.go",
        "resource_aviatrix_spoke_group_test.go",
        "resource_aviatrix_spoke_ha_gateway_test.go",
        "resource_aviatrix_spoke_instance_test.go",
        "resource_aviatrix_spoke_transit_attachment_test.go",
        "resource_aviatrix_traffic_classifier_test.go",
        "resource_aviatrix_trans_peer_test.go",
        "resource_aviatrix_transit_external_device_conn_test.go",
        "resource_aviatrix_transit_firenet_policy_test.go",
        "resource_aviatrix_transit_gateway_peering_helpers_test.go",
        "resource_aviatrix_transit_gateway_peering_test.go",
        "resource_aviatrix_transit_gateway_test.go",
        "resource_aviatrix_transit_group_test.go",
        "resource_aviatrix_transit_instance_test.go",
        "resource_aviatrix_tunnel_test.go",
        "resource_aviatrix_vgw_conn_test.go",
        "resource_aviatrix_vpc_test.go",
        "resource_aviatrix_vpn_cert_download_test.go",
        "resource_aviatrix_vpn_profile_test.go",
        "resource_aviatrix_vpn_user_accelerator_test.go",
        "resource_aviatrix_vpn_user_test.go",
        "resource_aviatrix_web_group_test.go",
        "utils_test.go",
    ],
    data = glob(["test-data/**"]),
    embed = [":aviatrix"],
    deps = [
        "//go/aviatrix.com/terraform-provider-aviatrix/goaviatrix",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_uuid//:uuid",
        "@com_github_hashicorp_terraform_plugin_sdk_v2//diag",
        "@com_github_hashicorp_terraform_plugin_sdk_v2//helper/acctest",
        "@com_github_hashicorp_terraform_plugin_sdk_v2//helper/resource",
        "@com_github_hashicorp_terraform_plugin_sdk_v2//helper/schema",
        "@com_github_hashicorp_terraform_plugin_sdk_v2//terraform",
        "@com_github_stretchr_testify//assert",
    ],
)
