load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "goaviatrix",
    srcs = [
        "account.go",
        "account_user.go",
        "aws_guard_duty.go",
        "aws_peering.go",
        "aws_tgw.go",
        "aws_tgw_connect.go",
        "aws_tgw_directconnect.go",
        "aws_tgw_peering.go",
        "aws_tgw_peering_domain_conn.go",
        "aws_tgw_transit_gateway_attachment.go",
        "aws_tgw_vpc_attachment.go",
        "aws_tgw_vpn_conn.go",
        "azure_peering.go",
        "azure_spoke_native_peering.go",
        "azure_vng_conn.go",
        "centralized_transit_firenet.go",
        "certificate_import.go",
        "check.go",
        "client.go",
        "client_2.go",
        "client_2_5.go",
        "client_mock.go",
        "cloudn_transit_gateway_attachment.go",
        "cloudwatch_agent.go",
        "const.go",
        "controller.go",
        "controller_access_allow_list.go",
        "controller_bgp_communities_auto_cloud_config.go",
        "controller_bgp_max_as_limit_config.go",
        "controller_email_config.go",
        "controller_enable_bgp_communities_global_config.go",
        "controller_metadata.go",
        "controller_private_mode_config.go",
        "controller_private_oob.go",
        "copilot_association.go",
        "copilot_deployment.go",
        "copilot_security_group_management_config.go",
        "datadog_agent.go",
        "dcf_attachment_points.go",
        "dcf_ips.go",
        "dcf_log_profile.go",
        "dcf_policy_block.go",
        "dcf_policy_list.go",
        "dcf_tls_profile.go",
        "dcf_trustbundle.go",
        "device.go",
        "device_aws_tgw_attachment.go",
        "device_tag.go",
        "distributed_firewalling_config.go",
        "distributed_firewalling_default_action_rule.go",
        "distributed_firewalling_deployment_policy.go",
        "distributed_firewalling_intra_vpc.go",
        "distributed_firewalling_origin_cert_enforcement_config.go",
        "distributed_firewalling_policy_list.go",
        "distributed_firewalling_proxy_ca_config.go",
        "edge_csp.go",
        "edge_csp_ha.go",
        "edge_equinix.go",
        "edge_equinix_ha.go",
        "edge_external_device_conn.go",
        "edge_gateway_wan_interface_discovery.go",
        "edge_megaport.go",
        "edge_megaport_ha.go",
        "edge_neo.go",
        "edge_neo_ha.go",
        "edge_platform_device_onboarding.go",
        "edge_platform_proxy_profile.go",
        "edge_spoke.go",
        "edge_vm_selfmanaged_ha.go",
        "feature_config.go",
        "filebeat_forwarder.go",
        "firenet.go",
        "firewall.go",
        "firewall_instance.go",
        "firewall_management_access.go",
        "firewall_tag.go",
        "fqdn.go",
        "gateway.go",
        "gateway_bgp_communities_config.go",
        "gateway_group.go",
        "gateway_keepalive_config.go",
        "geo_vpn.go",
        "global_vpc_excluded_instance.go",
        "global_vpc_tagging_settings.go",
        "k8s_config.go",
        "kubernetes_cluster.go",
        "link_hierarchy.go",
        "netflow_agent.go",
        "periodic_ping.go",
        "private_mode_lb.go",
        "private_mode_multicloud_endpoint.go",
        "profile.go",
        "proxy_config.go",
        "qos_class.go",
        "qos_policy_list.go",
        "rbac_goup_access_account_attachment.go",
        "rbac_group.go",
        "rbac_group_permission_attachment.go",
        "rbac_group_user_attachment.go",
        "remote_syslog.go",
        "saml_endpoint.go",
        "security_domain.go",
        "segmentation.go",
        "site2cloud.go",
        "site2cloud_ca_cert_tag.go",
        "sla_class.go",
        "smart_group.go",
        "split_tunnel.go",
        "splunk_logging.go",
        "spoke_external_device_conn.go",
        "spoke_gateway_subnet_group.go",
        "spoke_ha_gateway.go",
        "spoke_transit_attachment.go",
        "spoke_vpc.go",
        "sumologic_forwarder.go",
        "tags.go",
        "traffic_classifier.go",
        "transit_external_device_conn.go",
        "transit_firenet_policy.go",
        "transit_gateway_peering.go",
        "transit_ha_gateway.go",
        "transit_vpc.go",
        "transitive_peering.go",
        "tunnel.go",
        "utils.go",
        "vendor_integration.go",
        "version.go",
        "vgw_connection.go",
        "vpc.go",
        "vpc_tracker.go",
        "vpn_cert_download.go",
        "vpn_user.go",
        "vpn_user_accelerator.go",
        "web_group.go",
    ],
    importpath = "aviatrix.com/terraform-provider-aviatrix/goaviatrix",
    visibility = ["//go/aviatrix.com/terraform-provider-aviatrix:__subpackages__"],
    deps = [
        "@com_github_ajg_form//:form",
        "@com_github_hashicorp_terraform_plugin_sdk_v2//helper/schema",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_x_mod//semver",
    ],
)

go_test(
    name = "goaviatrix_test",
    srcs = [
        "account_test.go",
        "check_test.go",
        "dcf_trustbundle_test.go",
        "spoke_ha_gateway_async_test.go",
        "spoke_transit_attachment_test.go",
        "transit_ha_gateway_async_test.go",
        "utils_test.go",
    ],
    embed = [":goaviatrix"],
    deps = ["@com_github_stretchr_testify//assert"],
)
